--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "firebase": "^7.11.0",
+    "firebase-tools": "^7.15.1",
+    "firestore": "^1.1.6",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.3",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.2.0",
