--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-tools": "^7.15.1",
     "firestore": "^1.1.6",
     "register-service-worker": "^1.6.2",
+    "uikit": "^3.3.6",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.3",
