--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firestore": "^1.1.6",
     "register-service-worker": "^1.6.2",
     "uikit": "^3.3.6",
+    "uikit-icons": "^0.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.3",
