--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "uikit": "^3.3.6",
     "uikit-icons": "^0.5.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vuex": "^3.1.3",
-    "vuex-persistedstate": "^2.7.1"
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.2.0",
